[package]
name = "lp"
version = "0.1.0"
edition = "2021"

authors = ["Sebastiaan Vermeulen <mail@sebastiaanvermeulen.nl>"]

description = "A pure-Rust Interior-Point solver for linear programs"
license = "GPLv3"

repository = "https://github.com/sebasv/lp"
readme = "README.md"

keywords = ["linear-programming", "constrained", "optimization"]
categories = ["algorithms", "mathematics", "science"]

[features]
blas = ["ndarray-linalg"]

[dependencies]
linfa-linalg = "0.1.0"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
ndarray-linalg = { version = "0.16.0", optional = true }
num-traits = "0.2.16"
thiserror = "1.0.49"
approx = "0.5.1"
