[package]
name = "ripped"
version = "0.1.0"
edition = "2021"

authors = ["Sebastiaan Vermeulen <mail@sebastiaanvermeulen.nl>"]

description = "A pure-Rust Interior-Point solver for linear programs"
license = "GPLv3"

repository = "https://github.com/sebasv/lp"
readme = "README.md"

keywords = ["linear-programming", "constrained", "optimization"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = ["linfa-linalg"]

netlib-static = ["blas", "ndarray-linalg/netlib-static"]
netlib-system = ["blas", "ndarray-linalg/netlib-system"]

openblas-static = ["blas", "ndarray-linalg/openblas-static"]
openblas-system = ["blas", "ndarray-linalg/openblas-system"]

intel-mkl-static = ["blas", "ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["blas", "ndarray-linalg/intel-mkl-system"]

blas = ["ndarray/blas", "ndarray-linalg"]

[dependencies]
ndarray = { version = "0.15.6" }
linfa-linalg = { version = "0.1.0", optional = true }
ndarray-linalg = { version = "0.16.0", optional = true }
num-traits = "0.2.16"
thiserror = "1.0.49"

[dev-dependencies]
approx = "0.5.1"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }

[profile.release]
opt-level = 3
